Fix metadata share bar & clipping menu layout on doc page.

--- a/app/assets/stylesheets/design/clipping_menus.css.scss
+++ b/app/assets/stylesheets/design/clipping_menus.css.scss
@@ -239,7 +239,7 @@
         margin-right: 0;
       }
       .icon-fr2-menu_arrow {
-        top: -4px;
+        top: -14px;
         left: -3px;
         font-size: 13px;
       }
